--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stylish Snake Game</title>
+    <title>Stylish Snake</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <button id="startButton">Start</button>
+    <div class="button-container">
+        <button id="startButton">Start</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
